# overlogger

./: .gitignore  CMakeLists.txt  generate_sln.bat  ideas.txt  objetos_de_dominio.txt
OVERLOGGER_ALL/LIB/: DynamicLibraryLoaderWindows.cpp  IDynamicLibraryFunctionCaller.cpp
OVERLOGGER_DLL/: CMakeLists.txt
OVERLOGGER_DLL/include/: CallStack.h  CallStackFactory.h  CallStackFrame.h  CallStackFrameNull.h  CallStackNull.h  CallStackRetriever.h  DllUtils.h  ICallStack.h  ICallStackFactory.h  ICallStackFrame.h  ICallStackRetriever.h
OVERLOGGER_DLL/src/: CallStack.cpp  CallStackFactory.cpp  CallStackFrame.cpp  CallStackFrameNull.cpp  CallStackImpl.cpp  CallStackImpl.h  CallStackNull.cpp  CallStackRetriever_Linux.cpp  CallStackRetriever_Win.cpp  DynamicLibraryLoaderWindows.cpp  ICallStackFrame.cpp  coso.cpp
OVERLOGGER_LIB/: CMakeLists.txt
OVERLOGGER_LIB/include/: CallStack.h  CallStackFactory.h  CallStackFrame.h  CallStackFrameNull.h  CallStackLibrary.h  CallStackNull.h  CallStackRetriever.h  DynamicLibaryFunctionCaller.h  DynamicLibraryFunctionCaller.h  DynamicLibraryFunctionPointerWindows.h  DynamicLibraryLoaderFactory.h  ICallStack.h  ICallStackFactory.h  ICallStackFrame.h  ICallStackRetriever.h  IDynamicLibrary.h  IDynamicLibraryFunctionCaller.h  IDynamicLibraryFunctionPointer.h  IDynamicLibraryLoader.h  Overlogger.h
OVERLOGGER_LIB/src/: CallStack.cpp  CallStackFactory.cpp  CallStackLibrary.cpp  CallStackRetriever_Win.cpp  DynamicLibraryFunctionPointerLinux.cpp  DynamicLibraryFunctionPointerLinux.h  DynamicLibraryFunctionPointerWindows.cpp  DynamicLibraryFunctionPointerWindows.h  DynamicLibraryLinux.cpp  DynamicLibraryLinux.h  DynamicLibraryLoaderFactory_Linux.cpp  DynamicLibraryLoaderFactory_Win.cpp  DynamicLibraryLoaderLinux.cpp  DynamicLibraryLoaderLinux.h  DynamicLibraryLoaderWindows.cpp  DynamicLibraryLoaderWindows.h  DynamicLibraryWindows.cpp  DynamicLibraryWindows.h  IDynamicLibraryFunctionCaller.cpp  Overlogger.cpp  coso.cpp
OVERLOGGER_TEST_APP/: CMakeLists.txt
OVERLOGGER_TEST_APP/src/: main.cpp
TEST/OVERLOGGER_DLL/: CMakeLists.txt
TEST/OVERLOGGER_DLL/tests/: CallStackFactory_test.cpp  CallStackFrameNull_test.cpp  CallStackFrame_test.cpp  CallStackNull_test.cpp  CallStackRetriever_test.cpp  CallStack_test.cpp  ICallStackFrame_test.cpp
TEST/OVERLOGGER_LIB/: CMakeLists.txt
TEST/OVERLOGGER_LIB/tests/: CallStackLibrary_test.cpp  DynamicLibraryFunctionCaller_test.cpp  DynamicLibraryLoaderFactory_test.cpp  DynamicLibraryLoader_test.cpp  DynamicLibrary_test.cpp  Overlogger_test.cpp
include/overlogger/dll/: DllUtils.h
include/overlogger/dll/callstack/: CallStack.h  CallStackFactory.h  CallStackFrame.h  CallStackFrameNull.h  CallStackNull.h  CallStackRetriever.h  ICallStack.h  ICallStackFactory.h  ICallStackFrame.h  ICallStackRetriever.h
include/overlogger/lib/: Overlogger.h
include/overlogger/lib/callstack/: CallStackLibrary.h
include/overlogger/lib/dll/: DynamicLibraryFunctionCaller.h  DynamicLibraryLoaderFactory.h  IDynamicLibrary.h  IDynamicLibraryFunctionCaller.h  IDynamicLibraryFunctionPointer.h  IDynamicLibraryLoader.h
project/: CMakeLists.txt  project_config.cmake
project/cmake_utils/: add_standard_dependency.cmake  configure_subprojects.cmake  include_optional_utils.cmake  include_required_utils.cmake  setup_gtest.cmake  setup_visual_studio_filters.cmake
src/dll/callstack/: CallStack.cpp  CallStackFactory.cpp  CallStackFrame.cpp  CallStackFrameNull.cpp  CallStackImpl.cpp  CallStackImpl.h  CallStackNull.cpp  CallStackRetriever.linux.cpp  CallStackRetriever.win.cpp  ICallStackFrame.cpp
src/dll/tests/: CallStack.tests.cpp  CallStackFactory.tests.cpp  CallStackFrame.tests.cpp  CallStackFrameNull.tests.cpp  CallStackNull.tests.cpp  CallStackRetriever.tests.cpp  ICallStackFrame.tests.cpp
src/lib/: Overlogger.cpp
src/lib/callstack/: CallStackLibrary.cpp
src/lib/dll/: DynamicLibraryFunctionPointerLinux.linux.h  DynamicLibraryFunctionPointerWindows.win.cpp  DynamicLibraryFunctionPointerWindows.win.h  DynamicLibraryLoaderFactory.win.cpp  DynamicLibraryLoaderLinux.linux.h  DynamicLibraryLoaderWindows.win.cpp  DynamicLibraryLoaderWindows.win.h  DynamicLibraryWindows.win.cpp  DynamicLibraryWindows.win.h  IDynamicLibraryFunctionCaller.cpp
src/lib/tests/: CallStackLibrary.tests.cpp  DynamicLibrary.tests.cpp  DynamicLibraryFunctionCaller.tests.cpp  DynamicLibraryLoader.tests.cpp  DynamicLibraryLoaderFactory.tests.cpp  Overlogger.tests.cpp
src/test_app/: main.cpp
utils/: excludeOtherOsCodeFiles.txt  filtersMacro.txt  grabCodeFiles.txt  grabThisOsCodeFiles.txt  testMacro.txt
